<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="martysplace">Marty\'s Place</string>
    <string name="system_category">System</string>
    <string name="status_bar_category">Status bar</string>
    <string name="lock_screen_category">Lock screen</string>
    <string name="buttons_category">Buttons</string>
    <string name="gestures_category">Gestures</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="privacy_category">Privacy</string>
    <string name="global_actions_category">Power Menu</string>
    <string name="power_save_category">Power saving</string>
    <string name="buttons_software_category">Software buttons</string>
    <string name="buttons_hardware_category">Hardware buttons</string>
    <string name="sb_options">Status bar options</string>
    <string name="network_traffic">Network Traffic</string>
    <string name="qs_category">Quick settings options</string>
    <string name="clock_category">Clock and Date</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="pin_option">Pin option</string>
    <string name="double_tap">Double tap gestures</string>
    <string name="nav_ges">Gesture navigation</string>
    <string name="screenshot_gesture">Screenshot gesture</string>
    <string name="recent_category">Recent</string>
    <string name="system_main_category_summary">Adjust system options</string>
    <string name="statusbar_main_category_summary">Tune status bar items</string>
    <string name="lockscreen_main_category_summary">Modify lock screen layout and options</string>
    <string name="buttons_main_category_summary">Customize hardware and software keys</string>
    <string name="gestures_main_category_summary">Gesture based options and actions</string>
    <string name="privacy_main_category_summary">Misc settings</string>
    <string name="martysplace_dialog_title">Help us help you!</string>
    <string name="martysplace_dialog_message">Unfortunately, we are not mind readers!\n\nIf you find a bug, contact the Tipsy team or device maintainer with the following.\n\n1. Blame Nimit\n2. Logcat and/or last_kmsg\n3. Kernel and mods used\n4.
        Miscallaneous information\n\nIf you fail to report with the above information, do not expect the issue to be considered.</string>
    <string name="martysplace_dialog_toast">Read it all!</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Shut off pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Use Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
    <string name="smart_pixels_warning_text">Smart Pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend setting the amount of disabled pixels to 75 percent while shifting every 10 minutes.</string>
    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
    <string name="hide_apps_from_recents_summary">Hide apps from appearing in recents</string>
    <string name="hide_from_recents_add_app">Add app</string>
    <string name="title_activity_carbon_recents_settings">Recents</string>
    <string name="double_tap_status_bar_sleep_title">Double-tap status bar to sleep</string>
    <string name="double_tap_status_bar_sleep_summary">Tap status bar twice to sleep</string>
    <string name="double_tap_lock_sleep_title">Double-tap lock screen to sleep</string>
    <string name="double_tap_lock_sleep_summary">Tap lock screen twice to sleep</string>
    <string name="global_actions_title">Shortcuts</string>
    <string name="global_actions_summary">Add options to the power menu</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lock down on lock screen</string>
    <string name="global_actions_soundpanel">Sound panel</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_screenrecord">Screenrecord</string>
    <string name="global_actions_flashlight">Flashlight</string>
    <string name="global_actions_emergency">Emergency Call</string>
    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show recovery and bootloader restart options</string>
    <string name="unlock_scramble_pin_layout_title">Scramble PIN keyboard</string>
    <string name="unlock_scramble_pin_layout_summary">Scramble the pin keyboard layout</string>
    <string name="aggressive_battery_title">Aggressive Battery</string>
    <string name="aggressive_battery_summary">More strict battery savings</string>
    <string name="aggressive_battery_warning_text">These are power saving features. They may interfere with services intended to run at idle, like navigation apps. You can whitelist these apps from being affected in the app battery settings.</string>
    <string name="aggressive_idle_title">Aggressive Idle</string>
    <string name="aggressive_idle_summary">Enter device idle more frequently and wake up less</string>
    <string name="aggressive_standby_title">Aggressive Standby</string>
    <string name="aggressive_standby_summary">Restrict apps from running the background</string>
    <string name="aggressive_battery_saver_title">Auto-enable on battery saver </string>
    <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
    <string name="status_bar_tuner_title">Status bar items</string>
    <string name="status_bar_tuner_summary">Edit status bar icons and options</string>
    <string name="navigation_bar_invert_layout_title">Invert navigation bar layout</string>
    <string name="lock_screen_shortcuts_title">Lock screen shortcuts</string>
    <string name="lock_screen_shortcuts_summary">Manage lock screen bottom shortcuts</string>
    <string name="nav_bar_layout">Navigation bar layout</string>
    <string-array name="nav_bar_layouts">
        <item>Normal</item>
        <item>Compact</item>
        <item>Left-leaning</item>
        <item>Right-leaning</item>
    </string-array>
    <string name="volume_rocker_music_controls_title">Screen off playback control</string>
    <string name="volume_rocker_music_controls_summary">Hold volume keys to seek audio tracks</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double-tap power button</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Hold power button</string>
    <string name="qs_brightness_title">QS Brightness Design </string>
    <string name="qs_brightness_title_summary">Modify quick settings brightness design</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show the brightness slider</string>
    <string name="qs_brightness_position_bottom">Brightness slider on bottom</string>
    <string name="qs_autobrightness_icon_title">Auto-brightness icon</string>
    <string name="qs_autobrightness_icon_summary">Show an auto-brightness icon next to the brightness slider</string>
    <string name="status_bar_clock_title"> Clock and Date</string>
    <string name="status_bar_clock_title_summary">Manage statusbar clock and date style</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_style_title">Style</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
    <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
    <string name="aspect_ratio_apps_list_summary"></string>
    <string name="aspect_ratio_apps_list_title">Apps allowed to use scaling</string>
    <string name="aspect_ratio_category_title">Legacy app scaling</string>
    <string name="aspect_ratio_apps_info">Applications need to be restarted after changes</string>
    <string name="dashboard_category_title">Dashboard</string>
    <string name="dashboard_conditions_title">Dashboard conditions</string>
    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
    <string name="audio_panel_view">Audio panel</string>
    <string name="audio_panel_view_media_title">Media</string>
    <string name="audio_panel_view_ringer_title">Ring</string>
    <string name="audio_panel_view_notification_title">Notification</string>
    <string name="audio_panel_view_alarm_title">Alarm</string>
    <string name="audio_panel_view_voice_title">Voice</string>
    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
    <string name="battery_charging_category">Charging</string>
    <string name="battery_light_title">Custom battery LED</string>
    <string name="battery_light_summary">Set custom colors and options for battery LED</string>
    <string name="sensor_category">Sensors</string>
    <string name="pocket_mode_title">Pocket Mode</string>
</resources>