<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    android:key="system_fragment"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/global_actions_category"
        android:key="system_global_actions_preference_category"
        settings:allowDividerAbove="true" >

        <Preference
            android:key="global_actions"
            android:title="@string/global_actions_title"
            android:summary="@string/global_actions_summary"
            android:fragment="org.tipsy.martysplace.fragments.system.GlobalActionsSettings" />

        <SwitchPreference
            android:key="advanced_reboot"
            android:title="@string/global_actions_advanced_reboot_title"
            android:summary="@string/global_actions_advanced_reboot_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/battery_charging_category"
        android:key="battery_charging_category"
        settings:allowDividerAbove="true" >

        <SwitchPreference
            android:key="charging_animation"
            android:title="@string/charging_animation_title"
            android:summary="@string/charging_animation_summary"
            android:defaultValue="false" />

        <Preference
            android:key="charging_light"
            android:title="@string/battery_light_title"
            android:summary="@string/battery_light_summary"
            android:fragment="org.tipsy.martysplace.fragments.system.BatteryLightSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sensor_category"
        android:key="sensors_category"
        settings:allowDividerAbove="true" >

        <Preference
            android:key="pocket_mode"
            android:fragment="org.tipsy.martysplace.fragments.system.PocketMode"
            android:title="@string/pocket_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/power_save_category"
        android:key="system_power_save_preference_category"
        settings:allowDividerAbove="true" >

        <Preference
            android:key="smart_pixels"
            android:title="@string/smart_pixels_title"
            android:summary="@string/smart_pixels_summary"
            android:fragment="org.tipsy.martysplace.fragments.system.SmartPixels" />

        <Preference
            android:key="aggressive_battery"
            android:title="@string/aggressive_battery_title"
            android:summary="@string/aggressive_battery_summary"
            android:fragment="org.tipsy.martysplace.fragments.system.AggressiveBattery" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="aspect_ratio_category"
        android:title="@string/aspect_ratio_category_title">

        <SwitchPreference
            android:key="aspect_ratio_apps_enabled"
            android:title="@string/aspect_ratio_apps_enabled_title"
            android:summary="@string/aspect_ratio_apps_enabled_summary"
            android:defaultValue="false" />

        <org.tipsy.martysplace.preference.AppMultiSelectListPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:summary="@string/aspect_ratio_apps_list_summary"
            android:title="@string/aspect_ratio_apps_list_title"
            android:key="aspect_ratio_apps_list"
            android:persistent="false" />

        <org.tipsy.martysplace.preference.ScrollAppsViewPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:key="aspect_ratio_apps_list_scroller"
            android:persistent="false"
            android:selectable="false" />

        <Preference
            android:dependency="aspect_ratio_apps_enabled"
            android:persistent="false"
            android:summary="@string/aspect_ratio_apps_info" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dashboard_category"
        android:title="@string/dashboard_category_title">

    <SwitchPreference
        android:key="enable_conditions"
        android:title="@string/dashboard_conditions_title"
        android:summaryOn="@string/summary_dashboard_conditions_enabled"
        android:summaryOff="@string/summary_dashboard_conditions_disabled"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="enable_suggestions"
        android:title="@string/dashboard_suggestions_title"
        android:summaryOn="@string/summary_dashboard_suggestions_enabled"
        android:summaryOff="@string/summary_dashboard_suggestions_disabled"
        android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio_panel"
        android:title="@string/audio_panel_view" >

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_media"
        android:title="@string/audio_panel_view_media_title"
        android:defaultValue="true"
        android:enabled="false"/>

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_ringer"
        android:title="@string/audio_panel_view_ringer_title"
        android:defaultValue="false"/>

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_notification"
        android:title="@string/audio_panel_view_notification_title"
        android:defaultValue="false"/>

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_alarm"
        android:title="@string/audio_panel_view_alarm_title"
        android:defaultValue="false"/>

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_voice"
        android:title="@string/audio_panel_view_voice_title"
        android:defaultValue="false"/>

    <com.android.settings.tipsy.SystemSettingSwitchPreference
        android:key="audio_panel_view_bt_sco"
        android:title="@string/audio_panel_view_bt_sco_title"
        android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
